cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 20)

add_executable(leetcode
        1-two-sum.cpp
        3-longest-substring-without-repeating-characters.cpp
        20-valid-parentheses.cpp
        23-merge-k-sorted-lists.cpp
        100-same-tree.cpp
        102-binary-tree-level-order-traversal.cpp
        104-max-depth-of-binary-tree.cpp
        121-best-time-to-buy-and-sell-stock.cpp
        125-valid-palindrome.cpp
        206-reverse-linked-list.cpp
        226-invert-binary-tree.cpp
        242-valid-anagram.cpp
        235-lowest-common-ancestor-of-a-binary-search-tree.cpp
        383-ransom-note.cpp
        424-longest-repeating-character-replacement.cpp
        54-spiral-matrix.cpp
        542-01-matrix.cpp
        733-flood-fill.cpp)

add_executable(5-longest-palindromic-substring
        5-longest-palindromic-substring.cpp
)

add_executable(15-3sum
        15-3sum.cpp
)

add_executable(49-group-anagrams
        49-group-anagrams.cpp
)

add_executable(53-maximum-subarray
        53-maximum-subarray.cpp
)

add_executable(57-insert-interval
        57-insert-interval.cpp
)

add_executable(67-add-binary
        67-add-binary.cpp
)

add_executable(70-climbing-stairs
        70-climbing-stairs.cpp
)

add_executable(134-gas-station
        134-gas-station.cpp
)

add_executable(169-majority-element
        169-majority-element.cpp
)

add_executable(200-number-of-islands
        200-number-of-islands.cpp
)

add_executable(207-course-schedule
        207-course-schedule.cpp
)

add_executable(217-contains-duplicate
        217-contains-duplicate.cpp
)

add_executable(232-implement-queue-using-stacks
        232-implement-queue-using-stacks.cpp
)

add_executable(225-implement-stack-using-queues
        225-implement-stack-using-queues.cpp
)

add_executable(238-product-of-array-except-self
        238-product-of-array-except-self.cpp
)

add_executable(310-minimum-height-tree
        310-minimum-height-tree.cpp
)

add_executable(347-top-k-frequent-elements
        347-top-k-frequent-elements.cpp
)

add_executable(409-longest-palindrome
        409-longest-palindrome.cpp
)

add_executable(417-pacific-atlantic-water-flow
        417-pacific-atlantic-water-flow.cpp
)

add_executable(704-binary-search
        704-binary-search.cpp
)

add_executable(876-middle-of-the-linked-list
        876-middle-of-the-linked-list.cpp
)

add_executable(973-k-closest-points-to-origin
        973-k-closest-points-to-origin.cpp
)

add_executable(994-rotting-oranges
        994-rotting-oranges.cpp
)